# censo-querido-diario

./: .dockerignore  .gitignore  2021-03-01-faustosateles-common-domains.ipynb  2021-03-01-faustosateles-file-types.ipynb  CONTRIBUTING.MD  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  VALITATION-GUIDE.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt
censo/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
censo/censo/: settings.py  urls.py  wsgi.py
censo/data/: municipal_data.csv
data/: [Relatorio_1]Base_mapeamento_cidades_mais_de_100_mil_habitantes.csv  dicionario-dados-censo-querido-diario.json  municipal_data.csv
formulario/: admin.py  forms.py  models.py  views.py
nginx/: nginx.conf
notebooks/: 2020-10-19-anapaulagomes-common-domains.html  2020-10-19-anapaulagomes-common-domains.ipynb  2020-10-19-anapaulagomes-common-domains.py  2021-04-10-faustosateles-common-domains.ipynb  2021-04-10-faustosateles-file-types.ipynb  2021-06-20-bcbernardo-acessibility.ipynb  2021_03_25_analise_municipio_varias_fontes_publicacao.ipynb
reports/: report-more-than-100-thousand.MD
utils/: .dockerignore  .env.template  .funcignore  README.md  docker-compose.yml  fetch_portals.Dockerfile  host.json  requirements-dev.txt  requirements.txt  setup.cfg
utils/azure_ping_portals/: __init__.py  function.json
utils/src/: models.py
utils/src/fetch_portals/: callbacks.py  fetchers.py  main.py  models.py  sources.py
utils/src/fetch_portals/test/: conftest.py  test_callbacks.py  test_fetchers.py  test_main.py  test_sources.py
(+78 files in other folders)
