[metadata]
name = censusqdutils
version = 0.1.0
url = https://github.com/okfn-brasil/censo-querido-diario
author = Open Knowledge Brasil
author_email = contato@serenata.ai
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Utils for processing Querido Diario Census data.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.7
package_dir =
    =src
packages = find:
install_requires =
    aiohttp >= 3.7
    kaggle >= 1.5
    pandas >= 1.2
    python-dotenv >= 0.15

[options.extras_require]
dev = 
    black == 20.8b1
    flake8 >= 3.8.4
    isort >= 5.7.0
    mypy >= 0.800
    pandas-stubs >= 1.0.4.4
    pytest >= 6.2.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fetch-portals = fetch_portals.main:main
